k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comin-time-service
  namespace: comin-dev
  labels:
    app: comin-time-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comin-time-service
  template:
    metadata:
      labels:
        app: comin-time-service
    spec:
      containers:
      - name: comin-time-service
        image: ghcr.io/kaveeshag/comin-time-service:d97c780d41788bdeb0325d8bff31c7dc05219fe7
        imagePullPolicy: Always
        ports:
        - containerPort: 8084
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
